# CodeBloom-CEDT

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  app  app.js  demo.html  frontPage.html  naincy-test.html  pyproject.toml  requirements.txt  setup.py  trigger.txt  wireframe1.html
